Replace expected/actual time with delay duration
