# crowdsourcing-service/api/src/main/resources/openapi/documentation.yaml
@@ -6,9 +6,15 @@ info:
 servers:
 - url: "/"
 paths:
-  /departureDelay:
+  /delay:
     get:
       description: ""
+      parameters:
+      - name: "stopId"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
       responses:
         "200":
           description: "OK"
@@ -32,11 +38,16 @@ paths:
           content:
             '*/*':
               schema:
-                type: "string"
-  /departureDelay/{id}:
+                $ref: "#/components/schemas/EntityID_Integer"
+  /delay/{id}:
     get:
       description: ""
       parameters:
+      - name: "stopId"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -49,16 +60,22 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Object"
-  /departureDelay/average:
+  /delay/average:
     get:
       description: ""
+      parameters:
+      - name: "stopId"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
       responses:
         "200":
           description: "OK"
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/BigDecimal"
+                $ref: "#/components/schemas/Unit"
 components:
   schemas:
     DepartureDelay:
@@ -67,32 +84,48 @@ components:
         id:
           type: "integer"
           format: "int32"
-        expectedTime:
-          type: "string"
-        actualTime:
-          type: "string"
+        delay:
+          type: "integer"
+          format: "int64"
         userId:
+          type: "string"
+        stopId:
           type: "string"
       required:
       - "id"
-      - "expectedTime"
-      - "actualTime"
+      - "delay"
+      - "stopId"
     DepartureDelayDto:
       type: "object"
       properties:
-        expectedTime:
-          type: "string"
-        actualTime:
+        delay:
           type: "string"
         userId:
           type: "string"
+        stopId:
+          type: "string"
       required:
-      - "expectedTime"
-      - "actualTime"
+      - "delay"
       - "userId"
+      - "stopId"
     Object:
       type: "object"
       properties: {}
-    BigDecimal:
+    EntityID:
+      type: "object"
+      properties:
+        _value:
+          $ref: "#/components/schemas/Object"
+      required:
+      - "table"
+    EntityID_Integer:
+      type: "object"
+      properties:
+        table:
+          type: "integer"
+          format: "int32"
+        _value:
+          $ref: "#/components/schemas/Object"
+    Unit:
       type: "object"
       properties: {}
